<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_christiansearch"
            android:icon="@drawable/ic_christian"
            android:title="@string/christian_search" />
        <item
            android:id="@+id/nav_preacherlist"
            android:icon="@drawable/ic_preacher"
            android:title="@string/preacher_list" />
        <item
            android:id="@+id/nav_executivelist"
            android:icon="@drawable/ic_executive"
            android:title="@string/executive_list" />
        <item
            android:id="@+id/nav_christianregister"
            android:icon="@drawable/ic_register"
            android:title="@string/christian_register" />
        <item
            android:id="@+id/nav_carinquiry"
            android:icon="@drawable/ic_car"
            android:title="@string/car_inquiry" />
    </group>
</menu>