<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_worldmission"
            android:icon="@drawable/ic_worldmission"
            android:title="@string/world_mission" />
        <item
            android:id="@+id/nav_yearplan"
            android:icon="@drawable/ic_yearplan"
            android:title="@string/year_plan" />
        <item
            android:id="@+id/nav_parishguide"
            android:icon="@drawable/ic_parishguide"
            android:title="@string/parish_guide" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_notice"
            android:title="@string/notice" />
        <item
            android:id="@+id/nav_appinfo"
            android:icon="@drawable/ic_appinfo"
            android:title="@string/app_info" />
    </group>

</menu>